k8s/mssql-command-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-commands-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-commands
  template:
    metadata:
      labels:
        app: mssql-commands
    spec:
      containers:
        - name: mssql-commands
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 14331
          volumeMounts:
          - mountPath: /var/opt/mssql-commands/data
            name: mssqldb
      volumes:
      - name: mssqldb
        persistentVolumeClaim:
          claimName: mssql-claim
---
apiVersion: v1
kind: Service
metadata: 
  name: mssql-commands-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mssql-commands
  ports: 
    - name: mssql-commands
      protocol: TCP
      port: 14331
      targetPort: 14331
---
apiVersion: v1
kind: Service
metadata: 
  name: mssql-commands-loadbalancer-srv
spec:
  type: LoadBalancer
  selector:
    app: mssql
  ports: 
    - protocol: TCP
      port: 14331
      targetPort: 14331
