k8s/platforms-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-nodeport-service-srv
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 80
